src/main/java/com/example/kodomoproject/global/error/exception/CustomException.java
package com.example.kodomoproject.global.error.exception;

import com.example.kodomoproject.global.error.ErrorCode;
import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class CustomException extends RuntimeException {
    private final ErrorCode errorCode;
}
